crates/editor-codec-macros/tests/compile_fail/generic_type.stderr
error: Durable does not support generic parameters
 --> tests/compile_fail/generic_type.rs:6:13
  |
6 | pub struct S<T> {
  |             ^^^
